feat: Implement Profile Screen, Account Settings Graph, and Nested Navigation
- Added `ProfileScreen` and `AccountSettingsOverviewScreen`.
- Implemented nested navigation for Account Settings within the Profile graph (`profileGraph`).
- Created `AppRoute` sealed class to manage all navigation routes and graphs.
- Introduced `BottomNavItem` for bottom navigation bar items.
- Updated `AppNavHost` to use graph-based navigation (`mainAppGraph`, `bookmarkGraph`, `profileGraph`).
- Integrated `NavigationBar` in `AppWithTopBar` for bottom navigation.
- Added `BookmarkScreen` and its corresponding `bookmarkGraph`.
- Added `ChangePasswordScreen` as part of the Account Settings flow.
- Moved `NavArgs` and `NavigationIconType` to the `common.navigation` and `ui.common` packages respectively.
- Refactored `Screen.kt` into the new `AppRoute` structure.
- Updated `DetailScreen` to allow navigation to the Profile section.
- Added string resources for bottom navigation labels.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="label_height">Height</string>
     <string name="label_pixels_value">%1$d px</string>
     <string name="label_download_url">Download URL</string>
+    <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_bookmark">Bookmark</string>
+    <string name="bottom_nav_profile">Profile</string>
 </resources>
